# argo-stac-eo-pipeline

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REVIEW.md  SPEC.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml
claude_docs/: SPEC.md  SYNTHETIC_WORLD_SPEC.md
claude_docs/tasks/: plan.md  synthetic-world.md  todo.md
deploy/: kind-cluster.yaml
deploy/core/: namespace.yaml
docs/: walkthrough.md
docs/slides/: screencast-scripts.md  talk.md
examples/real-sentinel2/: README.md
scripts/: check_shared_logic.py  check_tools.sh  make_ladder_svg.py  make_screencast_data.py  reset_demo.py  seed_stac.py
src/eo_ingest/: __init__.py  __main__.py  config.py  download.py  ensure_collection.py  ingest.py  list_gaps.py  logbook.py  report.py  reset.py  seed.py  stac_source.py
stages/00-cron/: README.md  crontab  run.sh
stages/01-argo-retries/: README.md  cronworkflow.yaml
stages/02-fanout/: README.md
stages/03-stac-logbook/: README.md
stages/04-observability/: README.md
tasks/: synthetic-world.md  todo.md
tests/integration/: test_smoke_stage01.py
tests/unit/: test_check_shared_logic.py  test_config.py  test_download.py  test_ensure_collection.py  test_find_gaps.py  test_ingest.py  test_list_gaps.py  test_logbook_register.py  test_makefile.py  test_package.py  test_report.py  test_reset.py  test_seed.py  test_stac_source.py  test_synthetic_api.py  test_synthetic_collection.py  test_synthetic_geometry.py  test_synthetic_item.py  (+2 more)
(+20 files in other folders)
