[project]
name = "eo-ingest"
version = "0.1.0"
description = "Clone-and-run EO ingestion maturity-ladder companion (FOSS4G Europe 2026)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "boto3>=1.34",
    "pystac>=1.10",
    "pystac-client>=0.8",
    "rich>=13.7",
    "pillow>=10.3",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "moto[s3]>=5.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eo_ingest"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
